--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Wayne Jones # CHANGE THIS TO YOUR NAME
+name: Ethan Chapman # CHANGE THIS TO YOUR NAME
 
 # Short bio or description (displayed in the header)
-description: Teacher of Computer Science # CHANGE THIS FOR YOUR BLOG
+description: Student at TRC # CHANGE THIS FOR YOUR BLOG
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /jekyll-logo.png
+avatar: https://i.kym-cdn.com/entries/icons/original/000/030/967/spongebob.jpg
 
 #
 # Flags below are optional
@@ -21,12 +21,12 @@ footer-links:
   email: 
   facebook:
   flickr:
-  github: TRCCompSci # CHANGE THIS TO YOUR GITHUB USERNAME
+  github: Echappers # CHANGE THIS TO YOUR GITHUB USERNAME
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: 
+  twitter: https://twitter.com/CretinAbsolute
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
