--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://i.kym-cdn.com/entries/icons/original/000/030/967/spongebob.jpg
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: 
+  email: ethamchapmancollege@gmail.com
   facebook:
   flickr:
   github: Echappers # CHANGE THIS TO YOUR GITHUB USERNAME
@@ -26,9 +26,9 @@ footer-links:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: https://twitter.com/CretinAbsolute
+  twitter: CretinAbsolute
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: Echappers
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
