--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://i.kym-cdn.com/entries/icons/original/000/030/967/spongebob.jpg
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: ethamchapmancollege@gmail.com
+  email: ethanchapmancollege@gmail.com
   facebook:
   flickr:
   github: Echappers # CHANGE THIS TO YOUR GITHUB USERNAME
